<resources>
    <string name="app_name">WeatherClock</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="last_update_dec_08_2014_13_45_58_am">Last update: Dec 08, 2014 13:45:58 AM</string>
    <string name="sunny">Sunny</string>
    <string name="humidity_59">Humidity: 59%</string>
    <string name="pressure_977_hpa">Pressure: 977 hPa</string>
    <string name="_16_58_c">16.58 °C</string>
</resources>
